--- a/zxing/src/main/res/layout/activity_scanner.xml
+++ b/zxing/src/main/res/layout/activity_scanner.xml
@@ -22,13 +22,63 @@
             app:corner_color="@color/corner_color"
             app:frame_color="@color/viewfinder_frame"
             app:label_text="二维码/条形码扫描"
+            app:label_text_bottom="true"
             app:label_text_color="@color/white"
             app:laser_color="@color/laser_color"
             app:mask_color="@color/viewfinder_mask"
             app:result_color="@color/result_view"
-            app:label_text_bottom="true"
             app:result_point_color="@color/result_point_color" />
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <LinearLayout
+                android:id="@+id/back_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_back" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center"
+                    android:text="二维码/条码"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_ablum"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="相册"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/iv_flash_light"
+            android:layout_width="40dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/icon_flash_light"
+            android:visibility="gone" />
     </FrameLayout>
 
 </LinearLayout>
